syntax = "proto3";

package com.wuyiccc.hellodfs.namenode.rpc;

option java_multiple_files = true;
option java_package = "com.wuyiccc.hellodfs.namenode.rpc.model";
option java_outer_classname = "NameNodeRpcModel";

message RegisterRequest {
  string ip = 1;
  string hostname = 2;
}

message RegisterResponse {
  int32 status = 1;
}

message HeartBeatRequest {
  string ip = 1;
  string hostname = 2;
}

message HeartBeatResponse {
  int32 status = 1;
}

message MkdirRequest {
  string path = 1;
}

message MkdirResponse {
  int32 status = 1;
}

message ShutdownRequest {
  int32 code = 1;
}

message ShutdownResponse {
  int32 status = 1;
}

message FetchEditsLogRequest {
  int64 syncTxId = 1;
}

message FetchEditsLogResponse {
  string editsLog = 1;
}

message UpdateCheckpointTxIdRequest {
  int64 txId = 1;
}

message UpdateCheckpointTxIdResponse {
  int32 status = 1;
}