syntax = "proto3";

package com.wuyiccc.hellodfs.namenode.rpc;

option java_multiple_files = true;
option java_package = "com.wuyiccc.hellodfs.namenode.rpc.service";
option java_outer_classname = "NameNodeServer";

import "NameNodeRpcModel.proto";

service NameNodeService {
  rpc register(RegisterRequest) returns (RegisterResponse);
  rpc heartBeat(HeartBeatRequest) returns (HeartBeatResponse);
  rpc mkdir(MkdirRequest) returns (MkdirResponse);
  rpc shutdown(ShutdownRequest) returns (ShutdownResponse);
  rpc fetchEditsLog(FetchEditsLogRequest) returns (FetchEditsLogResponse);
  rpc updateCheckpointTxId(UpdateCheckpointTxIdRequest) returns (UpdateCheckpointTxIdResponse);
  rpc create(CreateFileRequest) returns (CreateFileResponse);
  rpc allocateDataNodes(AllocateDataNodesRequest) returns (AllocateDataNodesResponse);
  rpc informReplicaReceived(InformReplicaReceivedRequest) returns (InformReplicaReceivedResponse);
  rpc reportAllStorageInfo(ReportAllStorageInfoRequest) returns (ReportAllStorageInfoResponse);
  rpc getDataNodeForFile(GetDataNodeForFileRequest) returns (GetDataNodeForFileResponse);
}